<resources>
    <string name="app_name">AndroidCommon</string>

    <!-- style title -->
    <string name="style_default">Default Style</string>
    <string name="style_text">With Status Text</string>
    <string name="style_nofade">Default Style without background fade effect.</string>
    <string name="style_tint_color">Custom by tint color</string>
    <string name="style_custom">Custom Style</string>
    <string name="style_flyme">Flyme5 Style</string>
    <string name="style_miui">MIUI7 Style</string>
    <string name="style_md_ios">Material Design &#038; iOS Style</string>
    <string name="style_disable">Disable state</string>
    <string name="style_disable_opt">Toggle the others\' enable state</string>
    <string name="enable_title">enable/disable other SwitchButtons</string>


    <!--MarqueeView-->
    <string name="marquee_text">心中有阳光，脚底有力量！</string>
    <string name="marquee_texts">心中有阳光，脚底有力量！心中有阳光，脚底有力量！心中有阳光，脚底有力量！心中有阳光，脚底有力量！心中有阳光，脚底有力量！</string>

    <!---->
    <string name="action_strock">边框模式</string>
    <string name="action_fill">填充模式</string>

    <!--NumberProgressBar-->
    <string name="finish">ProgressBar is finished.</string>


    <!--ToolbarPanelLayout-->
    <string name="open_panel">Open The Panel</string>
    <string name="close_panel">Close The Panel</string>

    <!--PhotoPicker-->
    <string name="all_images">全部图片</string>
    <string name="folder_image_count">共%1$d张</string>
    <string name="preview_image_count">%1$s/%2$s</string>
    <string name="select_limit">最多选择%1$s张图片</string>
    <string name="complete">完成</string>
    <string name="select_complete">完成(%1$s/%2$s)</string>
    <string name="preview_count">预览(%1$s)</string>
    <string name="photo_crop">图片裁剪</string>
    <string name="origin">原图</string>
    <string name="origin_size">原图(%1$s)</string>


    <!--AlarmClock-->
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wed">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>
    <string name="cycle_sure">确定</string>
    <string name="vibration">震动</string>
    <string name="ring">铃声</string>

    <string name="perf_test">Perf test</string>

    <string name="accessibility_service_description">应用自动安装服务</string>


    <string name="newUpdateAvailable">发现新版本</string>
    <string name="dialogPositiveButton">立即下载</string>
    <string name="dialogNegativeButton">以后再说</string>
    <string name="app_no_new_update">没有发现新版本</string>
    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="download_success">下载完成，点击安装</string>

    <string name="action_search">Search</string>

    <string name="song_name">Sugar</string>
    <string name="artist">Maroon 5</string>

    <!--ExpandableTextView Start-->

    <!--ExpandableTextView End-->

    <!--FloatingNavigationView start-->
    <string name="vector_path_menu">M3,8 L21,8 21,6 3,6z M3,18 L21,18 21,16 3,16z M3,13 L21,13 21,11 3,11z</string>
    <string name="vector_path_line">M3,13 L21,13 21,11 3,11z M3,13 L21,13 21,11 3,11z M3,12 L21,12 21,12 3,12z</string>
    <string name="vector_path_close">M5,6.41 L17.59,19 19,17.59 6.41,5z M6.41,19 L19,6.41 17.59,5 5,17.59z M12,12 L12,12 12,12 12,12z</string>
    <string name="developer">André Mion</string>
    <string name="website">https://github.com/andremion</string>
    <string name="menu_item_import">Import</string>
    <string name="menu_item_gallery">Gallery</string>
    <string name="menu_item_slideshow">Slideshow</string>
    <string name="menu_item_tools">Tools</string>
    <string name="menu_group_communicate">Communicate</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_send">Send</string>
    <!--FloatingNavigationView end-->


    <!--TouchImageView-->
    <string name="single_touchimageview">Single TouchImageView</string>
    <string name="mirror_touchimageview">Mirroring Example</string>
    <string name="viewpager_example">ViewPager Example</string>
    <string name="switch_image_example">Switch Image Example</string>
    <string name="switch_scaletype_example">Switch ScaleType Example</string>
    <string name="get_scroll_position">getScrollPosition():</string>
    <string name="get_zoomed_rect">getZoomedRect():</string>
    <string name="get_current_zoom">getCurrentZoom():</string>
    <string name="mirroring_text">All touch gestures applied to one TouchImageView will be mirrored on the other.</string>
    <string name="swipe_viewpager">Swipe left or right to test ViewPager.</string>
    <string name="switch_image_text">Click TouchImageView to cycle through image resources. Note that the zoom state is maintained.</string>
    <string name="switch_scaletype_text">Click TouchImageView to cycle through supported ScaleTypes.</string>


    <!--PinnedSectionListView-->
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="action_updateDataset">Update dataset</string>

    <!---->
    <string name="profile">PROFILE</string>
    <string name="feed">FEED</string>
    <string name="activity">ACTIVITY</string>
    <string name="settings">SETTINGS</string>

    <!--BlurImageView-->
     <string name="blurimageview_info">Here is a Full blur imageView which will load two images, small one and normal one the small one will be blurry and once the normal one is loaded,replace the small one automatically.\nIn addition, it will cache image by itself.
    </string>
    <string name="blurimageview_info_ch">上面是一个完整的BlurImageView,为了展示虚化加载效果,它会首先去获取小图并虚化显示给用户;同时去获取大图,一旦大图加载完毕,便进行显示.\n另外,BlurImageView会自动缓存图片.
    </string>

    <!---->
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="reset">Random Reset</string>
    <!---->

    <!---->
    <string name="showView">Show View</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="stop_until_animation_perform_completed">StopUtilAnimationCompleted</string>
    <string name="title_activity_circle_progress_bar">CircleProgressBarActivity</string>
    <!---->

    <!---->
    <string name="progress_text_format_pattern">t %d ps</string>
    <!---->
</resources>
