<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/single_touchimageview_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_touchimageview"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/viewpager_example_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewpager_example"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/mirror_touchimageview_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mirror_touchimageview"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/switch_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_image_example"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/switch_scaletype_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_scaletype_example"
        android:layout_marginTop="20dp"/>

</LinearLayout>